# curl-parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  README_zh.md  _typos.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
benches/: parsing_benchmark.rs  simple_benchmark.rs
examples/: req.rs
src/: curl.pest  error.rs  lib.rs  parser.rs
