[package]
name = "curl-parser"
version = "0.3.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/curl-parser"
repository = "https://github.com/tyrchen/curl-parser"
homepage = "https://github.com/tyrchen/curl-parser"
description = """
Convert curl command to a ParsedRequest (could be further converted to reqwest::RequestBuilder)
"""
readme = "README.md"
categories = ["web-programming"]
keywords = ["curl", "reqwest"]

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
base64 = "0.21"
form_urlencoded = "1"
http = "0.2"
minijinja = { version = "1", features = ["loader", "speedups"] }
pest = "2"
pest_derive = "2"
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "json",
], optional = true }
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.7", features = ["rust_1_61"] }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
