[package]
name = "curl-parser"
version = "0.6.0"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/curl-parser"
repository = "https://github.com/tyrchen/curl-parser"
homepage = "https://github.com/tyrchen/curl-parser"
description = """
Convert curl command to a ParsedRequest (could be further converted to reqwest::RequestBuilder)
"""
readme = "README.md"
categories = ["web-programming"]
keywords = ["curl", "reqwest"]

[features]
default = ["reqwest", "uri"]
reqwest = ["dep:reqwest"]
uri = []

[dependencies]
base64 = "0.22"
form_urlencoded = "1"
http = "1"
minijinja = { version = "2.12", features = ["loader", "speedups"] }
pest = "2"
pest_derive = "2"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
], optional = true }
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.8" }

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.7.0", features = ["async_tokio", "real_blackbox"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[[bench]]
name = "parsing_benchmark"
harness = false

[[bench]]
name = "simple_benchmark"
harness = false
